refactor: remove inline css

--- a/src/public/styles/navigation.css
+++ b/src/public/styles/navigation.css
@@ -204,6 +204,11 @@ nav * {
     &:hover {
         color: var(--neutral-color-300);
     }
+
+    & i {
+        transform: translateY(1.5px);
+        margin-left: 2px;
+    }
 }
 
 #last-commit-info {
