--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,9 +1,7 @@
 <header>
-    <div class="mainlogo">
-        <span style="color: var(--brand-color-1)">E</span><span style="color: var(--brand-color-2)">e</span><span style="color: var(--brand-color-3)">j</span><span
-            style="color: var(--brand-color-4)"
-        >i</span><span style="color: var(--brand-color-5)">t</span><span style="color: var(--brand-color-6)">'</span><span style="color: var(--brand-color-7)">s</span>
-        <span style="color: var(--brand-color-8)" class="mainlogo-tools">Tools</span>
+    <div class="main-logo brand-colors">
+        <span>E</span><span>e</span><span>j</span><span>i</span><span>t</span><span>'</span><span>s</span>
+        <span class="main-logo-tools">Tools</span>
     </div>
     <div class="message">
         Welcome to my site! Here are some handy tools I made whilst learning
