--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -78,15 +78,11 @@
         <nav>
             <div>
                 <a href="/">
-                    <span class="logo">
-                        <span style="color: var(--brand-color-1)" data-value="E">E</span><span style="color: var(--brand-color-2)" data-value="e">e</span><span
-                            style="color: var(--brand-color-3)"
-                            data-value="j"
-                        >j</span><span style="color: var(--brand-color-4)" data-value="i">i</span><span style="color: var(--brand-color-5)" data-value="t">t</span><span
-                            style="color: var(--brand-color-6)"
+                    <span class="logo brand-colors">
+                        <span data-value="E">E</span><span data-value="e">e</span><span data-value="j">j</span><span data-value="i">i</span><span data-value="t">t</span><span
                             data-value="'"
-                        >'</span><span style="color: var(--brand-color-7)" data-value="s">s</span>
-                        <span style="color: var(--brand-color-8)" class="logo-tools" data-value="Tools">Tools</span>
+                        >'</span><span data-value="s">s</span>
+                        <span class="logo-tools" data-value="Tools">Tools</span>
                     </span>
                 </a>
             </div>
@@ -95,7 +91,7 @@
                 <div class="search-results"></div>
             </div>
             <a href="/tools/time" class="nav-time"><span id="time-display">Loading...</span> <i id="time-icon" class="fa-solid fa-triangle-exclamation"></i></a>
-            <a href="https://github.com/Eejit43/eejitstools-v2" target="_blank" class="source">Source <i class="fa-brands fa-github" style="margin-left: 3px; transform: translateY(1.5px)"></i></a>
+            <a href="https://github.com/Eejit43/eejitstools-v2" target="_blank" class="source">Source <i class="fa-brands fa-github"></i></a>
             <div id="last-commit-info">
                 <a href="https://github.com/Eejit43/eejitstools-v2{{commitInfo.url}}" target="_blank">
                     <code class="tooltip-bottom" data-tooltip="&quot;{{commitInfo.message}}&quot; by {{commitInfo.author}}"><i class="fa-solid fa-code-commit"></i>{{commitInfo.sha}}</code>
