--- a/src/views/pages/info/phonetic-alphabet.hbs
+++ b/src/views/pages/info/phonetic-alphabet.hbs
@@ -1,4 +1,4 @@
-<table class="info-table" style="overflow-x: hidden; margin-top: 30px; width: 40%">
+<table class="info-table small-width">
     <thead>
         <tr>
             <th>Letter</th>
