--- a/src/views/pages/info/tone-indicators.hbs
+++ b/src/views/pages/info/tone-indicators.hbs
@@ -1,5 +1,5 @@
 Tone indicators can be used to express tones or emotions in online messages, and are usually appended to a message.
-<table class="info-table" style="overflow-x: hidden; margin-top: 30px">
+<table class="info-table">
     <thead>
         <tr>
             <th>Tone Indicator</th>
