--- a/src/views/pages/tools/currency-exchange.hbs
+++ b/src/views/pages/tools/currency-exchange.hbs
@@ -1,6 +1,6 @@
 Last Updated:
 <span id="last-updated"><span class="error">Loading...</span></span>
 
-<div id="rates-grid" class="basic-grid" style="--min-width: 200px">
+<div id="rates-grid" class="basic-grid">
     <span class="error">Loading...</span>
 </div>
