--- a/src/views/pages/tools/image-converter.hbs
+++ b/src/views/pages/tools/image-converter.hbs
@@ -1,4 +1,4 @@
-<div class="basic-grid" style="--min-width: 450px">
+<div class="basic-grid">
     <section>
         <h2>Image:</h2>
         <label id="file-upload-label" for="file-upload" class="file-upload">Upload</label>
@@ -13,7 +13,7 @@
     </section>
 </div>
 <hr />
-<div class="basic-grid" style="--min-width: 450px">
+<div class="basic-grid">
     <section id="output-type-section">
         <h2>Output Type:</h2>
         <select id="output-type" disabled>
