--- a/src/views/pages/tools/keycode-info.hbs
+++ b/src/views/pages/tools/keycode-info.hbs
@@ -1,4 +1,4 @@
-<div id="ready"><span style="color: var(--success-color-300)"><i class="fa-solid fa-check"></i> Ready to get key information!</span></div>
+<div id="ready"><span class="success"><i class="fa-solid fa-check"></i> Ready to get key information!</span></div>
 Click any key to get information, click any cell to copy the information.
 <table class="keycodes">
     <thead>
