--- a/src/views/pages/tools/length-converter.hbs
+++ b/src/views/pages/tools/length-converter.hbs
@@ -20,7 +20,7 @@
 <hr />
 <section>
     <h2><span class="tooltip-bottom" data-tooltip="Rounded to the nearest trillionth">Output</span>:</h2>
-    <div id="message" class="error" style="font-size: 15px"></div>
+    <div id="message" class="error"></div>
     <select id="output-type">
         <option value="1">Kilometer</option>
         <option value="2">Meter</option>
