--- a/src/views/pages/tools/list-sorter.hbs
+++ b/src/views/pages/tools/list-sorter.hbs
@@ -3,7 +3,7 @@
     <textarea id="input"></textarea>
     <div>
         <span class="tooltip-bottom" data-tooltip="What separates items in the list (\n = newline)">Separator</span>:
-        <input id="separator" value="\n" style="width: calc(6ch + 12px)" />
+        <input id="separator" value="\n" />
     </div>
     <button id="alphabetize">Alphabetize (A-Z)</button>
     <button id="numerize">Numerize (filters non numbers)</button>
