--- a/src/views/pages/tools/quick-copy.hbs
+++ b/src/views/pages/tools/quick-copy.hbs
@@ -1,4 +1,4 @@
-<div class="basic-grid" style="--min-width: 450px">
+<div class="basic-grid">
     <section>
         <button id="clear-clipboard">Clear Clipboard</button>
 
