--- a/src/views/pages/tools/roman-converter.hbs
+++ b/src/views/pages/tools/roman-converter.hbs
@@ -1,5 +1,5 @@
 A letter with a bar over it multiplies that value by 1,000. For example,
-<span style="border-top: 1px solid">M</span>
+<span class="roman-numeral-big">M</span>
 equals 1,000,000. These numbers can be entered by putting an underscore before the letter, such as _M for the previous example.
 
 <div>
