--- a/src/views/pages/tools/svg-to-png.hbs
+++ b/src/views/pages/tools/svg-to-png.hbs
@@ -1,4 +1,4 @@
-<div class="basic-grid" style="--min-width: 450px">
+<div class="basic-grid">
     <div>
         <h2>SVG:</h2>
         <textarea id="svg-input"></textarea>
@@ -10,7 +10,7 @@
         <div id="svg-preview"></div>
     </div>
 </div>
-<div class="basic-grid" style="--min-width: 450px">
+<div class="basic-grid">
     <div>
         <h2>Save Options:</h2>
         <div>
