--- a/src/public/styles/index.css
+++ b/src/public/styles/index.css
@@ -3,7 +3,7 @@ header {
     text-align: center;
 }
 
-.mainlogo {
+.main-logo {
     font-weight: bold;
     font-size: 80px;
 
@@ -12,7 +12,7 @@ header {
     }
 }
 
-.mainlogo-tools {
+.main-logo-tools {
     font-weight: bold;
     font-size: 65px;
 
