--- a/src/public/styles/pages/tools/image-converter.css
+++ b/src/public/styles/pages/tools/image-converter.css
@@ -1,3 +1,7 @@
+section div.basic-grid {
+    --min-width: 200px;
+}
+
 #output-type-section select,
 #output-type-section button {
     display: block;
