--- a/src/public/styles/styles.css
+++ b/src/public/styles/styles.css
@@ -110,6 +110,7 @@ a {
 
 h1 {
     padding-block: 20px;
+    color: var(--info-color-200);
     font-weight: 600;
 
     & > i.fa-regular {
@@ -160,8 +161,50 @@ kbd {
     white-space: nowrap;
 }
 
+.success {
+    color: var(--success-color-300);
+}
+
 .error {
     color: var(--error-color-300);
+}
+
+.neutral {
+    color: var(--neutral-color-300);
+}
+
+.brand-colors * {
+    &:nth-child(1) {
+        color: var(--brand-color-1);
+    }
+
+    &:nth-child(2) {
+        color: var(--brand-color-2);
+    }
+
+    &:nth-child(3) {
+        color: var(--brand-color-3);
+    }
+
+    &:nth-child(4) {
+        color: var(--brand-color-4);
+    }
+
+    &:nth-child(5) {
+        color: var(--brand-color-5);
+    }
+
+    &:nth-child(6) {
+        color: var(--brand-color-6);
+    }
+
+    &:nth-child(7) {
+        color: var(--brand-color-7);
+    }
+
+    &:nth-child(8) {
+        color: var(--brand-color-8);
+    }
 }
 
 .toastify {
@@ -191,11 +234,15 @@ kbd {
 }
 
 .info-table {
-    margin: 50px auto 30px;
+    margin: 30px auto;
     border-collapse: collapse;
     width: 75%;
     overflow-y: scroll;
     color: var(--neutral-color-100);
+
+    &.small-width {
+        max-width: 500px;
+    }
 
     & th {
         border: 4px solid #1b1e24;
