--- a/src/views/pages/info/text-abbreviations.hbs
+++ b/src/views/pages/info/text-abbreviations.hbs
@@ -1,4 +1,4 @@
-<table class="info-table" style="overflow-x: hidden; margin-top: 30px">
+<table class="info-table">
     <thead>
         <tr>
             <th>Abbreviation</th>
