--- a/src/views/pages/tools/base64-image-converter.hbs
+++ b/src/views/pages/tools/base64-image-converter.hbs
@@ -1,4 +1,4 @@
-<div class="basic-grid" style="--min-width: 450px">
+<div class="basic-grid">
     <section>
         <h2>Image:</h2>
         <label id="file-upload-label" for="file-upload" class="file-upload">Upload</label>
@@ -15,7 +15,7 @@
     </section>
 </div>
 <hr />
-<div class="basic-grid" style="--min-width: 450px">
+<div class="basic-grid">
     <section>
         <h2>Base64 Encoded Image:</h2>
         <textarea id="encoded-result" readonly></textarea>
@@ -24,6 +24,6 @@
     </section>
     <section>
         <h2>Image:</h2>
-        <img id="image-result" style="max-width: 80%" />
+        <img id="image-result" />
     </section>
 </div>
