--- a/src/public/styles/pages/tools/calendar.css
+++ b/src/public/styles/pages/tools/calendar.css
@@ -1,3 +1,8 @@
+:root {
+    --checkbox-color: var(--info-color-300);
+    --checkbox-border-color: var(--neutral-color-100);
+}
+
 #calendar-grid {
     --min-width: 575px;
 
@@ -15,12 +20,12 @@
 #main-calendar,
 #date-display {
     margin: auto;
-    border: 3px solid #31353d;
+    border: 3px solid var(--full-page-border);
     border-radius: 15px;
-    background-color: #1e2529;
+    background-color: var(--full-page-background);
     padding: 15px;
     width: 85%;
-    color: #ffecd1;
+    color: var(--full-page-color);
 }
 
 #month-year {
@@ -47,7 +52,7 @@
 
     & td {
         position: relative;
-        border: 1px solid #31353d;
+        border: 1px solid var(--full-page-border);
         padding: 5px;
         width: 100%;
         height: 100%;
@@ -55,29 +60,29 @@
 
         &:not(.no-date):hover {
             cursor: pointer;
-            background-color: #31353d;
+            background-color: var(--full-page-border);
         }
     }
 }
 
 .selected-date {
-    background-color: #2b3d47;
+    background-color: var(--full-page-active);
 
     &:hover {
-        background-color: #344a56 !important;
+        background-color: var(--full-page-active-hover) !important;
     }
 }
 
 .current-date {
-    background-color: #348037;
+    background-color: var(--success-color-350);
 
     &:hover {
-        background-color: #4c9a4f !important;
+        background-color: var(--success-color-300) !important;
     }
 }
 
 .holiday {
-    color: #145791;
+    color: var(--info-color-300);
 }
 
 .moon-icon {
@@ -160,8 +165,8 @@
 
         & .checkbox-container {
             animation: wave 400ms ease;
-            border-color: #506eec;
-            background-color: #506eec;
+            border-color: var(--checkbox-color);
+            background-color: var(--checkbox-color);
 
             &::before {
                 transform: scale(2.5);
@@ -176,13 +181,13 @@
     }
 
     &:disabled + .todo-label .checkbox-container {
-        border-color: #9098a9;
+        border-color: var(--checkbox-border-color);
         background-color: rgb(144 152 169 / 30%);
     }
 
     &:checked:disabled + .todo-label .checkbox-container {
-        border-color: #9098a9;
-        background-color: #9098a9;
+        border-color: var(--checkbox-border-color);
+        background-color: var(--checkbox-border-color);
     }
 }
 
@@ -203,7 +208,7 @@
         vertical-align: middle;
         transform: scale(1);
         transition: all 200ms ease;
-        border: 1px solid #9098a9;
+        border: 1px solid var(--checkbox-border-color);
         border-radius: 3px;
         width: 18px;
         height: 18px;
@@ -213,7 +218,7 @@
             transform: scale(0);
             opacity: 1;
             border-radius: 50%;
-            background-color: #506eec;
+            background-color: var(--checkbox-color);
             width: 100%;
             height: 100%;
             content: "";
@@ -255,7 +260,7 @@
     }
 
     &:hover .checkbox-container {
-        border-color: #506eec;
+        border-color: var(--checkbox-color);
     }
 }
 
