--- a/src/public/styles/pages/tools/color-info.css
+++ b/src/public/styles/pages/tools/color-info.css
@@ -26,7 +26,7 @@ h2 {
     position: absolute;
     cursor: pointer;
     margin-top: 0;
-    border: 4px solid #16181c;
+    border: 4px solid var(--dark-border);
     background-image: repeating-linear-gradient(45deg, #aaa 25%, transparent 25%, transparent 75%, #aaa 75%, #aaa), repeating-linear-gradient(45deg, #aaa 25%, white 25%, white 75%, #aaa 75%, #aaa);
     background-position:
         0 0,
@@ -90,7 +90,7 @@ h2 {
 }
 
 #color-history {
-    border: 4px solid #16181c;
+    border: 4px solid var(--dark-border);
     padding: 15px;
     padding-left: 10px;
     width: 90%;
