--- a/src/public/styles/pages/tools/svg-to-png.css
+++ b/src/public/styles/pages/tools/svg-to-png.css
@@ -15,7 +15,7 @@ section div.basic-grid {
 
 #svg-preview,
 #png-canvas {
-    border: 4px solid #16181c;
+    border: 4px solid var(--dark-border);
     padding: 5px;
     width: 200px;
     height: 200px;
