--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -40,12 +40,12 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png" />
         <link rel="manifest" href="/favicons/site.webmanifest" />
-        <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#3e498a" />
+        <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#a94646" />
         <meta name="apple-mobile-web-app-title" content="Eejit's Tools" />
         <meta name="application-name" content="Eejit's Tools" />
-        <meta name="msapplication-TileColor" content="#3e498a" />
+        <meta name="msapplication-TileColor" content="#a94646" />
         <meta name="msapplication-config" content="/favicons/browserconfig.xml" />
-        <meta name="theme-color" content="#3e498a" />
+        <meta name="theme-color" content="#a94646" />
 
         <!-- Styles -->
         <link rel="stylesheet" href="/styles/styles.css" />
