--- a/src/public/styles/styles.css
+++ b/src/public/styles/styles.css
@@ -169,7 +169,7 @@ kbd {
     border-radius: 3px;
     background-color: #eee;
     padding: 2px 4px;
-    color: #333;
+    color: var(--neutral-color-450);
     font-weight: bold;
     font-size: 0.85em;
     line-height: 1;
@@ -405,7 +405,7 @@ img.emoji {
     position: fixed;
     z-index: 9999;
     inset: 0;
-    background-color: rgb(0 0 0 / 50%);
+    background-color: rgb(0 0 0 / 40%);
     width: 100%;
     height: 100%;
 
@@ -414,7 +414,7 @@ img.emoji {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        color: #f55;
+        color: var(--error-color-300);
         font-weight: bold;
         font-size: 50px;
     }
