--- a/src/public/styles/pages/tools/roman-converter.css
+++ b/src/public/styles/pages/tools/roman-converter.css
@@ -26,7 +26,7 @@
     width: 15em;
 
     & tr > td:first-of-type {
-        font-family: "Times New Roman", Times, serif;
+        font-family: var(--font-family-serif);
 
         & span {
             border-top: 1.5px solid;
