refactor: simplify some search box selectors

--- a/src/public/styles/navigation.css
+++ b/src/public/styles/navigation.css
@@ -158,7 +158,7 @@ nav * {
                 color: var(--neutral-color-200);
 
                 &:hover,
-                &.selected {
+                &.search-result-selected {
                     color: var(--neutral-color-300);
                 }
             }
