fix(coins-list): get correct year for new row, disable new row button when updating

--- a/src/public/styles/pages/info/coins-list.css
+++ b/src/public/styles/pages/info/coins-list.css
@@ -89,6 +89,10 @@ tr[data-upgrade="true"] {
         background-color: #3e434b;
     }
 
+    &[data-disabled="true"] {
+        background-color: #2b3037;
+    }
+
     & i.fa-plus {
         padding-right: 6px;
     }
