fix: correct issue where search bar border didn't take up full width

--- a/src/public/styles/navigation.css
+++ b/src/public/styles/navigation.css
@@ -148,6 +148,7 @@ nav * {
             border-top: 2px solid var(--neutral-color-200);
             padding-top: 15px;
             padding-bottom: 15px;
+            width: 300px;
 
             & .results-title {
                 padding-bottom: 5px;
