feat(coins-info): add coin images to subpages

--- a/src/public/styles/pages/info/coins-info.css
+++ b/src/public/styles/pages/info/coins-info.css
@@ -3,16 +3,23 @@
         margin-bottom: 1em;
     }
 
-    & .coin-information-row {
-        margin-block: 8px;
-        color: var(--neutral-color-150);
+    & #information-grid {
+        & .coin-information-row {
+            margin-block: 8px;
+            color: var(--neutral-color-150);
 
-        & span {
-            color: var(--neutral-color-100);
+            & span {
+                color: var(--neutral-color-100);
 
-            &[data-unknown="true"] {
-                color: var(--error-color-200);
+                &[data-unknown="true"] {
+                    color: var(--error-color-200);
+                }
             }
+        }
+
+        & img {
+            width: 200px;
+            max-width: 100%;
         }
     }
 }
