feat(coins-info): make coin variant images popup, move right 50px

--- a/src/public/styles/pages/info/coins-info.css
+++ b/src/public/styles/pages/info/coins-info.css
@@ -4,6 +4,8 @@
     }
 
     & #information-grid {
+        --min-width: 350px;
+
         & .coin-information-row {
             margin-block: 8px;
             color: var(--neutral-color-150);
