--- a/src/views/pages/info/coins-info.hbs
+++ b/src/views/pages/info/coins-info.hbs
@@ -5,3 +5,9 @@ Welcome! Here is specific information about United States coinage from throughou
 
 <div id="output"></div>
 <div id="output-grid"><span class="error">Loading...</span></div>
+
+<div id="modal">
+    <span id="close-modal">&times;</span>
+    <img id="modal-image" />
+    <div id="modal-caption"></div>
+</div>
