feat(coins-info): use lists for values that have year variants, add edge type info

--- a/src/public/styles/pages/info/coins-info.css
+++ b/src/public/styles/pages/info/coins-info.css
@@ -10,6 +10,14 @@
             margin-block: 8px;
             color: var(--neutral-color-150);
 
+            & ul {
+                margin-left: 35px;
+
+                & li::marker {
+                    content: "– ";
+                }
+            }
+
             & span {
                 color: var(--neutral-color-100);
 
