feat(coins-info/coins-list): use consistent language to refer to coins

--- a/src/public/styles/pages/info/coins-info.css
+++ b/src/public/styles/pages/info/coins-info.css
@@ -39,7 +39,7 @@
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 10px;
 
-    & .coin-type {
+    & .information-button {
         transition:
             opacity 100ms ease,
             border-radius 100ms ease;
