feat(coins-list): add button to show/hide unobtained coin designs to simplify interface

--- a/src/public/styles/pages/info/coins-list.css
+++ b/src/public/styles/pages/info/coins-list.css
@@ -61,6 +61,10 @@ button.coin-denomination-expand {
     display: none;
 }
 
+#coins-list.unobtained-designs-hidden .coin-design[data-none-obtained="true"] {
+    display: none;
+}
+
 tr[data-obtained="false"] {
     background-color: var(--error-color-300);
 }
