feat(coins-list): run popup image loaders and format strippers on coin row creation

--- a/src/public/styles/pages/info/coins-list.css
+++ b/src/public/styles/pages/info/coins-list.css
@@ -122,6 +122,7 @@ tr[data-upgrade="true"] {
 }
 
 .mintage-for-all-varieties::after {
+    cursor: text;
     content: " (for all varieties)";
 }
 
