feat: improve page descriptions

--- a/src/views/pages/tools/list-sorter.hbs
+++ b/src/views/pages/tools/list-sorter.hbs
@@ -6,7 +6,7 @@
         <input id="separator" value="\n" />
     </div>
     <button id="alphabetize">Alphabetize (A-Z)</button>
-    <button id="numerize">Numerize (filters non numbers)</button>
+    <button id="numerical-order">Sort in numerical order (filters non numbers)</button>
     <button id="randomize">Randomize</button>
     <button id="reverse">Reverse current order</button>
     <button id="clear" class="button-danger">Clear</button>
