--- a/src/views/pages/info/coins-info.hbs
+++ b/src/views/pages/info/coins-info.hbs
@@ -1,4 +1,4 @@
-Welcome! Here is specific information about United States coinage from throughout the country's history. For a general overview, see
+Welcome! Here is specific information about circulating United States coinage from throughout the country's history. For a general overview, see
 <a href="https://en.wikipedia.org/wiki/Coins_of_the_United_States_dollar" class="external-link" target="_blank">this Wikipedia page</a>.
 
 <hr />
